[tool.poetry]
name = "pymus"
version = "0.1.0"
description = "A mus game and its Telegram bot server"
authors = ["Mickaël Seznec <mickael.seznec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
redis = "^3.4.1"
telepot = "^12.7"
pyyaml = "^5.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
